# chatgpt-clone

./: .gitignore  README.md  pyproject.toml
app/: manage.py
app/chatgptclone/: asgi.py  settings.py  urls.py  views.py  wsgi.py
app/simplechat/: apps.py  forms.py  models.py  urls.py  views.py
app/simplechat/migrations/: 0001_initial.py
app/simplechat/templates/: base.html  index.html
