[tool.poetry]
name = "chatgpt-clone"
version = "0.1.0"
description = "A chatgpt clone"
authors = ["Nitesh Jaswal <nitesh1511@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chatgpt_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
